clean up SecurityConfig.java